--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^5.0.0",
     "hexo-baidu-url-submit": "^0.0.6",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
