--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ neat_js:
 
 baidu_url_submit:
   count: 1000 ## 提交最新的一个链接
-  host: www.test.com ## 在百度站长平台中注册的域名
-  token: your_token ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  host: markiiiiiiii.github.io ## 在百度站长平台中注册的域名
+  token: B6n1GedIAEBJyodi ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
   path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
