--- a/themes/dawn/_config.yml
+++ b/themes/dawn/_config.yml
@@ -190,7 +190,7 @@ profile:
   author_title: 啥也学一点，啥也学不精
   author_description: 个人简介。
   location: Shandong, China
-  follow: https://markiiiiiiii.github.io/
+  follow: https://www.fh123.co/
   # Social Links
   social:
     links:
@@ -214,7 +214,7 @@ profile:
   # My Personal Links
   links:
     Github: https://markiiiiiiii.github.io/
-    Blog: http://markiiiiiiiiii.github.io
+    Blog: https://www.fh123.co/
     #微博: http://weibo.com/cofess
     #花瓣: http://huaban.com/cofess
     #Behance: https://www.behance.net/cofess
